--- a/configs-test/application.properties
+++ b/configs-test/application.properties
@@ -1,5 +1,6 @@
-mainChatId=-1002278105460
+#mainChatId=-1002278105460
+mainChatId=-4592900327
 adminChatId=287959887
-reminderTriggerCron=*/10 * * * * *
+reminderTriggerCron=0 0 * * * *
 spreadsheetList=Test
 spreadsheetID=1fb5ssf4Mp8HZ9aAFAOox9byQGUHstRub_5ssOdDoNro
